--- a/.github/workflows/frogbot-scan-repo.yml
+++ b/.github/workflows/frogbot-scan-repo.yml
@@ -18,13 +18,11 @@ jobs:
         branch: ["main"]
     steps:
       - uses: jfrog/frogbot@v2
-        with:
-          oidc-provider-name: jfrog-github-oidc 
         env:
           ACTIONS_STEP_DEBUG: true
           # [Mandatory]
           # JFrog platform URL
-          JF_URL: https://${{ vars.JF_URL }}/
+          JF_URL: ${{ secrets.JF_URL }}
 
           # [Mandatory if JF_USER and JF_PASSWORD are not provided]
           # JFrog access token with 'read' permissions on Xray service
@@ -32,11 +30,11 @@ jobs:
 
           # [Mandatory if JF_ACCESS_TOKEN is not provided]
           # JFrog username with 'read' permissions for Xray. Must be provided with JF_PASSWORD
-          # JF_USER: ${{ vars.JF_USER }}
+          JF_USER: ${{ vars.JF_USER }}
 
           # [Mandatory if JF_ACCESS_TOKEN is not provided]
           # JFrog password. Must be provided with JF_USER
-          # JF_PASSWORD: ${{ secrets.JF_PASSWORD }}
+          JF_PASSWORD: ${{ secrets.JF_PASSWORD }}
 
           # [Mandatory]
           # The GitHub token is automatically generated for the job
