--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,8 @@ jobs:
       - uses: jfrog/setup-jfrog-cli@v4
         name: Setup JFrog CLI
         id: setup-cli
-      - name: Set up Python 3.10
+      - name: Set up Python
         uses: actions/setup-python@v4
-        with:
-          python-version: 3.10
       - name: configure jfrog environment
         run: |
           jf pip-config --repo-resolve=auth-python-virtual
