--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,8 @@ jobs:
 
       - name: publish python package
         run: |
+          ls ./
+          ls ./dist
           jf rt u / auth-python-virtual/example-projects/ --module=python-ipmi
 
       - name: Set up Docker Buildx
