--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,8 +60,8 @@ jobs:
       - name: Authenticate Docker
         uses: docker/login-action@v3
         with:
-          registry: ${{ vars.JF_URL }}
-          username: ${{ vars.JF_USER }}
+          registry: ${{ secrets.JF_URL }}
+          username: ${{secrets.JF_USER}}
           password: ${{ secrets.JF_PASSWORD }}
 
       - name: docker build and scan
