--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,9 +53,6 @@ jobs:
         run: |
           ls ./dist
           jf rt u ./dist/* auth-python-virtual/ --module=python-ipmi
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3    
                 
       - name: Authenticate Docker
         uses: docker/login-action@v3
@@ -66,9 +63,9 @@ jobs:
 
       - name: docker build and scan
         run: |  
-          jf docker build . -t soleng.jfrog.io/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}:${{github.run_number}}
-          jf docker pull ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
-          jf docker scan ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}                               
+          jf docker build . -t ${{secrets.JF_HOST}}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}:${{github.run_number}}
+          jf docker push ${{secrets.JF_HOST}}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}:${{github.run_number}}
+          jf docker scan ${{secrets.JF_HOST}}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}:${{github.run_number}}                               
 
       - name: add docker package to build
         run: |  
